Added p Text on Photos

--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,9 @@ h2 {
 
 .container-photos {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  text-align: center;
 }
 
 .link {
